--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -37,7 +37,7 @@ block content
       h2 Accessibility
 
       p
-        strong Attend the in-person performance:
+        strong Attend the in-person performance
         br
         | The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.
       
@@ -45,7 +45,7 @@ block content
         button Get tickets
 
       p
-        strong Watch the performance online:
+        strong Watch the performance online
         br
         | A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.
 
@@ -53,7 +53,7 @@ block content
         button Get the film
 
       p
-        strong Listen to an audio description online:
+        strong Listen to an audio description online
         br
         | An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.
       
