--- a/fourbyfour/ask.pug
+++ b/fourbyfour/ask.pug
@@ -3,7 +3,7 @@ block title
   title Emily Hansel | Four by Four | Ask
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
-  .body-container.bio
+  .body-container.bio.new-page
     .bio-container.no-animation
       p.
         Hello respected colleagues and friends,
