--- a/fourbyfour/video.pug
+++ b/fourbyfour/video.pug
@@ -3,7 +3,7 @@ block title
   title Emily Hansel | Four by Four | Ask
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
-  .body-container.bio
+  .body-container.bio.new-page
     h1
       a(href="/fourbyfour")
         img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
