better mobile stuff

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -234,8 +234,9 @@
     left: 5px
 @media screen and (max-width: 500px)
   .home-button
-    top: 65px
-    left: 5px
+    top: 16px
+    right: 16px
+    left: unset
 @media screen and (max-width: 700px)
   .mobile-nav
     width: 60%
