--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -20,7 +20,7 @@ block content
             li Saturday, May 28 at 4:00 pm
 
           a(href="")
-            button Buy tickets
+            button(tabindex="-1") Buy tickets
         
       .image-bar 
         img(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan dancing")
@@ -42,7 +42,7 @@ block content
         | The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.
       
       a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX")
-        button Get tickets
+        button(tabindex="-1") Get tickets
 
       p
         strong Watch the performance online
@@ -50,7 +50,7 @@ block content
         | A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.
 
       a(href="/fourbyfour/video")
-        button Get the film
+        button(tabindex="-1") Get the film
 
       p
         strong Listen to an audio description online
@@ -58,7 +58,7 @@ block content
         | An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.
       
       a(href="/fourbyfour/audio")
-        button Get the audio description
+        button(tabindex="-1") Get the audio description
 
       p Patrons are invited to correspond with Emily (<a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a>) about specific accessibility concerns or questions.
 
