--- a/fourbyfour/audio.pug
+++ b/fourbyfour/audio.pug
@@ -15,17 +15,17 @@ block content
       p How much would you like to pay to access the <i>Four by Four</i> audio description?
 
       ul.button-group
-        a(href="" target="_blank") 
+        a(href="https://docs.google.com/forms/d/e/1FAIpQLSfuS7UfADIXlCedm7Ch8f39vDU06qavvmjkmbhS9oIYpeU7VQ/viewform?usp=sf_link" target="_blank") 
           button(tabindex="-1") $0  
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/14kcO90aqgCa2f63ci" target="_blank")
           button(tabindex="-1")  $5
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/8wMdSd1eufy66vm8wD" target="_blank")
           button(tabindex="-1") $10
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/aEUaG18GWfy606YdQY" target="_blank")
           button(tabindex="-1")  $15
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/28ocO90aqdpYf1S7sB" target="_blank")
           button(tabindex="-1") $20
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/dR629vf5keu2aLC3cm" target="_blank")
           button(tabindex="-1") $25
 
 block scripts
