--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -19,7 +19,7 @@ block content
             li Friday, May 27 at 7:00 pm
             li Saturday, May 28 at 4:00 pm
 
-          a(href="")
+          a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX")
             button(tabindex="-1") Buy tickets
         
       .image-bar 
