--- a/fourbyfour/video.pug
+++ b/fourbyfour/video.pug
@@ -15,17 +15,17 @@ block content
       p How much would you like to pay to access the <i>Four by Four</i> film?
 
       ul.button-group
-        a(href="" target="_blank") 
+        a(href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLScqS1OaKyi67SjiSAvNPPkVx23l4p-tiMQ4Bw4SirBB2UqKrg/viewform?usp%3Dsf_link&sa=D&source=docs&ust=1650136235800495&usg=AOvVaw1nENQ3nAwH8MUnQmh-6Ot6" target="_blank") 
           button $0  
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/6oE8xTcXcfy6bPGbIJ" target="_blank")
           button  $5
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/eVa5lH1eudpYf1SfZ0" target="_blank")
           button $10
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/dR63dzcXc99If1SdQT" target="_blank")
           button  $15
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/9AQ4hD8GWclU9HyeUY" target="_blank")
           button $20
-        a(href="" target="_blank")
+        a(href="https://buy.stripe.com/6oE29v4qG99Ig5W6ot" target="_blank")
           button $25
 
 block scripts
