--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ")
