--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -19,7 +19,7 @@ block content
             li Friday, May 27 at 7:00 pm
             li Saturday, May 28 at 4:00 pm
 
-          a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX")
+          a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank")
             button(tabindex="-1") Buy tickets
         
       .image-bar 
@@ -41,7 +41,7 @@ block content
         br
         | The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.
       
-      a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX")
+      a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank")
         button(tabindex="-1") Get tickets
 
       p
@@ -66,7 +66,7 @@ block content
 
       p
         <i>Four by Four</i> is Emily Hansel’s first self-produced, evening-length choreographic work. This project also marks the first time she’s formed a business, hired dancers as employees, and managed such a substantial project budget. 
-        a(href="https://emilyhansel.me/fourbyfour/ask") Learn more about this process, check out the project budget, and consider making a donation.
+        a(href="/fourbyfour/ask") Learn more about this process, check out the project budget, and consider making a donation.
 
 block scripts
   script sessionStorage.seen = true;
