--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -4,9 +4,9 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
   .body-container.bio
-    h1
+    h1.hero
       a(href="/fourbyfour")
-        img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
+        img(src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
     .bio-container.no-animation
       .heading 
         p 
@@ -23,10 +23,14 @@ block content
             button(tabindex="-1") Buy tickets
         
       .image-bar 
-        img(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity.")
-        img(src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side.")
-        img(src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side.")
-        img(src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs.")
+        .image-hover
+          img(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity." tabindex="0")
+        .image-hover
+          img(src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side." tabindex="0")
+        .image-hover
+          img(src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side." tabindex="0")
+        .image-hover
+          img(src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs." tabindex="0")
 
       p Choreographed by Emily Hansel and co-created by dancers Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert, <i>Four by Four</i> is a messy attempt at refusing productivity. Since beginning work in November 2021, the artists have been practicing the radical act of not knowing. They’ve been fighting their capitalist tendencies, taking their time, embracing messiness, and prioritizing adaptability. <i>Four by Four</i>, featuring original music composed by Sophia Cotraccia and Bed Juodvalkis and lighting design by Thomas Bowersox, is a contemporary dance that is simultaneously light-hearted, serious, ordinary, and one-of-a-kind.
 
