--- a/fourbyfour/audio.pug
+++ b/fourbyfour/audio.pug
@@ -1,12 +1,12 @@
 extends ../pug/_main_template.pug
 block title
-  title Emily Hansel | Four by Four | Ask
+  title Emily Hansel | Four by Four | Audio
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
   .body-container.bio
-    h1
+    h1.hero
       a(href="/fourbyfour")
-        img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
+        img(src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
     .bio-container.no-animation
       p An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.
 
