--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -1,6 +1,6 @@
 extends ../pug/_main_template.pug
 block title
-  title Emily Hansel | Four by Four | Ask
+  title Emily Hansel | Four by Four
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
   .body-container.bio
