--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -27,7 +27,7 @@ html(lang="en")
         .nav-item
           a.site-link(href="/choreography" alt="choreography") choreography
         .nav-item
-          a.site-link(href="/digital-art" alt="digital art") digital art
+          a.site-link(href="/fourbyfour" alt="Four by Four art") Four by Four
         .nav-item
           a.site-link(href="/photos" alt="photos") photos
         .nav-item
