--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -17,9 +17,9 @@ block content
           ul
             li Thursday, May 26 at 7:00 pm
             li Friday, May 27 at 7:00 pm
-            li Saturday, May 28 at 4:00 pm
+            li Saturday, May 28 at 4:00 pm<super>*</super>
 
-          a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank")
+          a(href="https://odc.dance/fourbyfour" target="_blank")
             button(tabindex="-1") Buy tickets
         
       .image-bar 
@@ -38,6 +38,10 @@ block content
 
       p Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket.
 
+      p
+        | <super>*</super> Saturday's performance will include a free, pre-show event for kids ages 5-12. 
+        a(href="/fourbyfour/kids") Learn more and RSVP.
+
       h2 Accessibility
 
       p
@@ -45,7 +49,7 @@ block content
         br
         | The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.
       
-      a(href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank")
+      a(href="https://odc.dance/fourbyfour" target="_blank")
         button(tabindex="-1") Get tickets
 
       p
