--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -52,5 +52,5 @@ html(lang="en")
       ga('create', 'UA-83432320-1', 'auto');
       ga('send', 'pageview');
     script(src="https://code.jquery.com/jquery-3.3.1.min.js")
-    script(src="/assets/js/index.js")
+    script(src="/assets/js/index.js?v=2")
     block scripts
