tab index just work

--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -38,10 +38,10 @@ html(lang="en")
       span x
       form(method="POST", action="https://formspree.io/emilylhansel@gmail.com")
         p Fill out the form below to contact Emily
-        input(tabindex="1"  type="text" name="name" placeholder="Name" required)
-        input(tabindex="2"  type="email" name="_replyto" placeholder="Email" required)
-        textarea(tabindex="3"  name="message" placeholder="Type your message here" required)
-        input.email-send(tabindex="4"  type="submit" value="Send")
+        input(type="text" name="name" placeholder="Name" required)
+        input(type="email" name="_replyto" placeholder="Email" required)
+        textarea(name="message" placeholder="Type your message here" required)
+        input.email-send(type="submit" value="Send")
         //- input(type="hidden" name="_next" value="//emilyhansel.me/sent")
     block content
     script.
