--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -35,30 +35,37 @@ block content
           b Emily Hansel
 
         p Co-created and performed by
-          br: b Alex Carrington
-          br: b Mia J. Chong
-          br: b Shareen DeRyan
-          br: b Chelsea Reichert
+          br
+          b Alex Carrington
+          br
+          b Mia J. Chong
+          br
+          b Shareen DeRyan
+          br
+          b Chelsea Reichert
         
         p Original music by
-          br: b Sophia Cotraccia
-          br: b Ben Juodvalkis
+          br
+          b Sophia Cotraccia
+          br
+          b Ben Juodvalkis
 
         p Additional music:
           | “Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia
 
         p Lighting design by
-          br: b Thomas Bowersox
+          br
+          b Thomas Bowersox
 
         p Production management by
-          br: b Thomas Bowersox
+          br
+          b Thomas Bowersox
 
         p <i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.
       
       img.img-profile(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
 
-      p TODO
-        | —Emily
+      p TODO —Emily
 
       img.img-profile(src="../../assets/img/fourbyfour/program_artists.png" alt="Artists")
 
