stylistic improvements ala Emily

--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -21,11 +21,11 @@ block content
       img.img-profile(src="../../assets/img/fourbyfour/program_program.png" alt="Program")
 
       .text-center
-        p PART ONE
-        p: i pause
-        p PART TWO
-        p: i pause
-        p PART THREE
+        h3 PART ONE
+        p: i.thin pause
+        h3 PART TWO
+        p: i.thin pause
+        h3 PART THREE
 
       img.img-profile(src="../../assets/img/fourbyfour/program_credits.png" alt="Credits")
 
