--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -19,7 +19,7 @@ block content
           li Friday, May 27 at 7:00 pm
           li Saturday, May 28 at 4:00 pm
       
-      img.img-profile(src="../../assets/img/fourbyfour/program_program.png" alt="Program")
+      img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_program.png" alt="Program")
 
       .text-center
         h3 PART ONE
@@ -28,7 +28,7 @@ block content
         p: i.thin pause
         h3 PART THREE
 
-      img.img-profile(src="../../assets/img/fourbyfour/program_credits.png" alt="Credits")
+      img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_credits.png" alt="Credits")
 
       .text-center
         p Choreographed and directed by
@@ -64,14 +64,14 @@ block content
 
         p <i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.
       
-      img.img-profile(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
+      img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
 
       p TODO —Emily
 
-      img.img-profile(src="../../assets/img/fourbyfour/program_artists.png" alt="Artists")
+      img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_artists.png" alt="Artists")
 
       p 
-        img.img-profile(src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO")
+        img.img-profile.img-heading(src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO")
         b Emily Hansel (Choreographer) 
         | is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in 
         i Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100
@@ -113,15 +113,19 @@ block content
         b Sophia Cotraccia (Composer/Musician) 
         | is a senior at Oberlin College and Conservatory, where they study musical and religious traditions from South Asia. Sophia plays the violin, the drumset, and the steelpan, and enjoys writing and recording music in her free time. They hail originally from Ithaca, NY and look forward to returning to the East Coast upon graduating.
 
+      p: br
+
       p 
         b Ben Juodvalkis (Composer/Musician)
         composes original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.
+
+      p: br
 
       p 
         b Thomas Bowersox (Lighting Designer and Stage Manager) 
         | is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.
       
-      img.img-profile(src="../../assets/img/fourbyfour/program_connect.png" alt="Connect")
+      img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_connect.png" alt="Connect")
 
       p Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have so that she can apply for grants and get funding for future projects.)
 
