add reopening sentence

--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -36,11 +36,14 @@ block content
 
       p <i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.
 
-      p Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket.
+      p Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket. Please note that ODC Theater requires all patrons to show proof of up to date COVID-19 vaccination status, which includes boosters for those eligible. Unfortunately, this means that children under age 5, who are not eligible for vaccines at this time, are not invited into ODC's buildings. Learn more at 
+        a(href="https://odc.dance/reopening" target="_blank") ODC.dance/reopening
+        | .
 
       p
         | <super>*</super> Saturday's performance will include a free, pre-show event for kids ages 5-12. 
-        a(href="/fourbyfour/kids") Learn more and RSVP.
+        a(href="/fourbyfour/kids") Learn more and RSVP
+        |.
 
       h2 Accessibility
 
