ODC theatre PDF

--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -144,5 +144,10 @@ block content
       a(href="https://docs.google.com/forms/d/e/1FAIpQLScB-Vb7sSYFlD8ob0Lc_rr00DsfiYI31Um1NMOlfp72rIpiOw/viewform?usp=sf_link" target="_blank")
         button(tabindex="-1") Subscribe
 
+      p(style="margin: 2.5rem 0 1rem; display: flex; justify-content: center;")
+        img(src='../../assets/img/fourbyfour/kids/tiles.png' width="240px" style="margin: 0;")
+
+      a(href="assets/ABOUT_ODC_THEATER.pdf?v=1") Learn more about ODC theatre
+
 block scripts
   script sessionStorage.seen = true;
