update Thomas credits

--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -54,7 +54,7 @@ block content
         p Additional music:
           | “Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia
 
-        p Lighting design by
+        p Lighting and scenic design by
           br
           b Thomas Bowersox
 
@@ -122,7 +122,7 @@ block content
       p: br
 
       p 
-        b Thomas Bowersox (Lighting Designer and Stage Manager) 
+        b Thomas Bowersox (Lighting and Scenic Designer and Production Manager) 
         | is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_connect.png" alt="Connect")
