--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -72,8 +72,8 @@ block content
 
       p 
         img.img-profile.img-heading(src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO")
-        b Emily Hansel (Choreographer) 
-        | is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in 
+        b Emily Hansel, Choreographer and Director
+        | , (she/they) is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in 
         i Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100
         | and danced with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, and SOULSKIN Dance, among others 
 
@@ -87,43 +87,43 @@ block content
 
       p 
         img.img-profile(src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs.")
-        b Alex Carrington (Dancer/Co-creator) 
-        | received the majority of her training at the University of North Carolina School of the Arts and the LINES Ballet Training Program. She has danced for Margaret Jenkins Dance Company, tinypistol, detour dance, Kristin Damrow & Company, little seismic dance company, and in addition has performed works by Crystal Pite, Yin Yue, Katie Wong, Andrea Peña, and Nick Korkos. 
+        b Alex Carrington, Dancer and Co-creator
+        | , (she/they) received the majority of her training at the University of North Carolina School of the Arts and the LINES Ballet Training Program. She has danced for Margaret Jenkins Dance Company, tinypistol, detour dance, Kristin Damrow & Company, little seismic dance company, and in addition has performed works by Crystal Pite, Yin Yue, Katie Wong, Andrea Peña, and Nick Korkos. 
       
       p 
         img.img-profile(src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side.")
-        b Mia J. Chong (Dancer/Co-creator) 
-        | is from San Francisco, California. She received her training from the Kirov Academy of Ballet, San Francisco Ballet School, the Ailey School, Alonzo King LINES Ballet, Hubbard Street Dance Chicago, the School at Jacob’s Pillow’s Contemporary Program, and ODC School. Mia has danced with Post:ballet, Robert Moses’ Kin, Dance Theatre of San Francisco, and San Francisco Symphony. She has received a Princess Grace Award, Chris Hellman Dance Honor, Aninstantia Foundation Grant, LINES Ballet Homer Avila Award, Jacob’s Pillow Ann & Weston Hicks Choreography Fellowship, and Isadora Duncan Dance Awards and nominations. Mia currently studies Organizational Behavior and Change at New York University and dances with ODC/Dance, where she joined as an apprentice in 2016 and became a company dancer in 2018. She currently choreographs dance works throughout the San Francisco Bay Area. Please visit 
+        b Mia J. Chong, Dancer and Co-creator
+        | , (she/they) is from San Francisco, California. She received her training from the Kirov Academy of Ballet, San Francisco Ballet School, the Ailey School, Alonzo King LINES Ballet, Hubbard Street Dance Chicago, the School at Jacob’s Pillow’s Contemporary Program, and ODC School. Mia has danced with Post:ballet, Robert Moses’ Kin, Dance Theatre of San Francisco, and San Francisco Symphony. She has received a Princess Grace Award, Chris Hellman Dance Honor, Aninstantia Foundation Grant, LINES Ballet Homer Avila Award, Jacob’s Pillow Ann & Weston Hicks Choreography Fellowship, and Isadora Duncan Dance Awards and nominations. Mia currently studies Organizational Behavior and Change at New York University and dances with ODC/Dance, where she joined as an apprentice in 2016 and became a company dancer in 2018. She currently choreographs dance works throughout the San Francisco Bay Area. Please visit 
         a(href="http://miajchong.com" target="_blank") miajchong.com
         |  to learn more.
 
       p 
         img.img-profile(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity.")
-        b Shareen DeRyan (Dancer/Co-creator) 
-        | received her initial training at Ballet Arts Academy in Spokane, Washington and trained at Lines Ballet in San Francisco. In Portland Oregon she danced for a contemporary ballet company, Bouand Dance. In the Bay Area she has danced for Kinetech Arts for three years and performed in works by Sidra Bell, Jon Kinzel, Christian Burns, Robert Moses, Amy Foley, Karla Quintero, Mark Foehringer, Amelia Eisen and Christy Funsch. She has danced for companies in the Bay Area including: Fullstop Dance, Mud Water Theatre, ZiruDance, and Bellwether Dance Project. Currently Shareen is in her fifth year of dancing for Kristin Damrow & Company and Jennifer Perfilio Movement Works.
+        b Shareen DeRyan, Dancer and Co-creator
+        | , (she/her) received her initial training at Ballet Arts Academy in Spokane, Washington and trained at Lines Ballet in San Francisco. In Portland Oregon she danced for a contemporary ballet company, Bouand Dance. In the Bay Area she has danced for Kinetech Arts for three years and performed in works by Sidra Bell, Jon Kinzel, Christian Burns, Robert Moses, Amy Foley, Karla Quintero, Mark Foehringer, Amelia Eisen and Christy Funsch. She has danced for companies in the Bay Area including: Fullstop Dance, Mud Water Theatre, ZiruDance, and Bellwether Dance Project. Currently Shareen is in her fifth year of dancing for Kristin Damrow & Company and Jennifer Perfilio Movement Works.
 
       p 
         img.img-profile(src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side.")
-        b Chelsea Reichert (Dancer/Co-creator) 
-        | is a freelance dance artist originally from Kansas, and currently based in the Bay Area. She received a BFA in dance from Marymount Manhattan College, and also studied at the San Francisco Conservatory of Dance. She’s grateful for the friends and teachers inside and outside of these structures that have influenced her work deeply. Since living in the Bay Area, she’s had the pleasure of creating and performing with Maurya Kerr/tinypistol, Sharp&Fine, kickbal, Courtney Mazeika, Kinetech Arts, Nicole von Arx, Larry Arrington, Risa Jaroslow, and Emily Hansel. She’s stoked to be working with Emily, Shareen, Mia, and Alex on this project.
+        b Chelsea Reichert, Dancer and Co-creator
+        | , (she/her) is a freelance dance artist originally from Kansas, and currently based in the Bay Area. She received a BFA in dance from Marymount Manhattan College, and also studied at the San Francisco Conservatory of Dance. She’s grateful for the friends and teachers inside and outside of these structures that have influenced her work deeply. Since living in the Bay Area, she’s had the pleasure of creating and performing with Maurya Kerr/tinypistol, Sharp&Fine, kickbal, Courtney Mazeika, Kinetech Arts, Nicole von Arx, Larry Arrington, Risa Jaroslow, and Emily Hansel. She’s stoked to be working with Emily, Shareen, Mia, and Alex on this project.
       
       p: br
 
       p 
-        b Sophia Cotraccia (Composer/Musician) 
-        | is a senior at Oberlin College and Conservatory, where they study musical and religious traditions from South Asia. Sophia plays the violin, the drumset, and the steelpan, and enjoys writing and recording music in her free time. They hail originally from Ithaca, NY and look forward to returning to the East Coast upon graduating.
+        b Sophia Cotraccia, Composer and Musician
+        | , (she/they) is a senior at Oberlin College and Conservatory, where they study musical and religious traditions from South Asia. Sophia plays the violin, the drumset, and the steelpan, and enjoys writing and recording music in her free time. They hail originally from Ithaca, NY and look forward to returning to the East Coast upon graduating.
 
       p: br
 
       p 
-        b Ben Juodvalkis (Composer/Musician)
-        composes original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.
+        b Ben Juodvalkis, Composer and Musician
+        | , (he/him) composes original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.
 
       p: br
 
       p 
-        b Thomas Bowersox (Lighting and Scenic Designer and Production Manager) 
-        | is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.
+        b Thomas Bowersox, Lighting and Scenic Designer and Production Manager
+        | , (he/him) is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_connect.png" alt="Connect")
 
