--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -66,7 +66,28 @@ block content
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
 
-      p TODO —Emily
+      p “What’s your show about?”
+
+      p I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language too. So here’s what I can tell you:
+
+      p Our performance is the result of a process that was centered around a few goals:
+        ul 
+          li Creating a safe and equitable work environment
+          li Being adaptable and flexible
+          li Taking our time
+          li Practicing ongoing consent
+          li Embracing messiness and not knowing
+          li Opposing our capitalist tendencies toward productivity
+
+      p There are several ironies at play here. Our not knowing led us to know new things. We took all the time we wanted until we got to theater week and only had three days to get the show up. In order to create any semblance of refusing capitalism, we spent lots of time considering various economic factors, like contracts, fundraising, and artist pay. And, evidently, our laid back, anti-capitalist studio time delivered a literal product that I’m inviting people to pay to attend.
+
+      p In this product, you’ll witness some fairly abstract stuff—stuff that both means a lot and means nothing at all. Everything has really specific meaning, and everything has whatever meaning you decide it has. There’s plenty to get, nothing to get, you get what you get.
+
+      p 
+        i Four by Four
+        |  is for, about, and by the four performers on the stage. And I guess it’s also a little bit for, about, and by me.
+      
+      p —Emily
 
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_artists.png" alt="Artists")
 
