--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -66,9 +66,9 @@ block content
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
 
-      p “What’s your show about?”
+      p What’s your show about?
 
-      p I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language too. So here’s what I can tell you:
+      p I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language, too. So here’s what I can tell you:
 
       p Our performance is the result of a process that was centered around a few goals:
         ul 
@@ -107,24 +107,24 @@ block content
       p When she isn’t performing or choreographing, Emily teaches ballet and contemporary to students ages 3-18 and works in administrative roles for a number of artists/companies in addition to producing her own work.
 
       p 
-        img.img-profile(src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs.")
+        img.img-profile(src="../../assets/img/fourbyfour/program_alex.jpeg" alt="Alex Carrington, wearing red, curls and twists her arms and legs.")
         b Alex Carrington, Dancer and Co-creator
         | , (she/they) received the majority of her training at the University of North Carolina School of the Arts and the LINES Ballet Training Program. She has danced for Margaret Jenkins Dance Company, tinypistol, detour dance, Kristin Damrow & Company, little seismic dance company, and in addition has performed works by Crystal Pite, Yin Yue, Katie Wong, Andrea Peña, and Nick Korkos. 
       
       p 
-        img.img-profile(src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side.")
+        img.img-profile(src="../../assets/img/fourbyfour/program_mia.jpeg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side.")
         b Mia J. Chong, Dancer and Co-creator
         | , (she/they) is from San Francisco, California. She received her training from the Kirov Academy of Ballet, San Francisco Ballet School, the Ailey School, Alonzo King LINES Ballet, Hubbard Street Dance Chicago, the School at Jacob’s Pillow’s Contemporary Program, and ODC School. Mia has danced with Post:ballet, Robert Moses’ Kin, Dance Theatre of San Francisco, and San Francisco Symphony. She has received a Princess Grace Award, Chris Hellman Dance Honor, Aninstantia Foundation Grant, LINES Ballet Homer Avila Award, Jacob’s Pillow Ann & Weston Hicks Choreography Fellowship, and Isadora Duncan Dance Awards and nominations. Mia currently studies Organizational Behavior and Change at New York University and dances with ODC/Dance, where she joined as an apprentice in 2016 and became a company dancer in 2018. She currently choreographs dance works throughout the San Francisco Bay Area. Please visit 
         a(href="http://miajchong.com" target="_blank") miajchong.com
         |  to learn more.
 
       p 
-        img.img-profile(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity.")
+        img.img-profile(src="../../assets/img/fourbyfour/program_shareen.jpeg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity.")
         b Shareen DeRyan, Dancer and Co-creator
         | , (she/her) received her initial training at Ballet Arts Academy in Spokane, Washington and trained at Lines Ballet in San Francisco. In Portland Oregon she danced for a contemporary ballet company, Bouand Dance. In the Bay Area she has danced for Kinetech Arts for three years and performed in works by Sidra Bell, Jon Kinzel, Christian Burns, Robert Moses, Amy Foley, Karla Quintero, Mark Foehringer, Amelia Eisen and Christy Funsch. She has danced for companies in the Bay Area including: Fullstop Dance, Mud Water Theatre, ZiruDance, and Bellwether Dance Project. Currently Shareen is in her fifth year of dancing for Kristin Damrow & Company and Jennifer Perfilio Movement Works.
 
       p 
-        img.img-profile(src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side.")
+        img.img-profile(src="../../assets/img/fourbyfour/program_chelsea.jpeg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side.")
         b Chelsea Reichert, Dancer and Co-creator
         | , (she/her) is a freelance dance artist originally from Kansas, and currently based in the Bay Area. She received a BFA in dance from Marymount Manhattan College, and also studied at the San Francisco Conservatory of Dance. She’s grateful for the friends and teachers inside and outside of these structures that have influenced her work deeply. Since living in the Bay Area, she’s had the pleasure of creating and performing with Maurya Kerr/tinypistol, Sharp&Fine, kickbal, Courtney Mazeika, Kinetech Arts, Nicole von Arx, Larry Arrington, Risa Jaroslow, and Emily Hansel. She’s stoked to be working with Emily, Shareen, Mia, and Alex on this project.
       
@@ -164,6 +164,15 @@ block content
 
       a(href="https://docs.google.com/forms/d/e/1FAIpQLScB-Vb7sSYFlD8ob0Lc_rr00DsfiYI31Um1NMOlfp72rIpiOw/viewform?usp=sf_link" target="_blank")
         button(tabindex="-1") Subscribe
+
+      p You’re invited to take a look at the 
+        a(href="https://docs.google.com/spreadsheets/d/17Y3JT9glywDPLDD9cYtv2FwYSViGZLAsBNb8fDeneYM/edit?usp=sharing" target="_blank") project budget
+        |  to learn more about the expenses involved in producing 
+        i Four by Four
+        |. If you’re interested in making a donation to support the work, you can do so via Venmo (@EmilyHansel) or Paypal (
+        a(href="http://paypal.me/emhansel" target="_blank") paypal.me/emhansel
+        |).
+
 
       p(style="margin: 2.5rem 0 1rem; display: flex; justify-content: center;")
         img(src='../../assets/img/fourbyfour/kids/tiles.png' width="240px" style="margin: 0;")
