new emily photo

--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -92,7 +92,7 @@ block content
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_artists.png" alt="Artists")
 
       p 
-        img.img-profile.img-heading(src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO")
+        img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_emily.jpeg" alt="Portrait of Emily Hansel")
         b Emily Hansel, Choreographer and Director
         | , (she/they) is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in 
         i Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100
