--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -66,12 +66,12 @@ block content
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily")
 
-      p What’s your show about?
+      p What’s the show about?
 
       p I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language, too. So here’s what I can tell you:
 
       p Our performance is the result of a process that was centered around a few goals:
-        ul 
+        ul.dashed
           li Creating a safe and equitable work environment
           li Being adaptable and flexible
           li Taking our time
@@ -145,10 +145,13 @@ block content
       p 
         b Thomas Bowersox, Lighting and Scenic Designer and Production Manager
         | , (he/him) is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.
+
+      p: br
+      p: i Dancer photos by Steve Disenhof. Emily’s photo by Robbie Sweeny.
       
       img.img-profile.img-heading(src="../../assets/img/fourbyfour/program_connect.png" alt="Connect")
 
-      p Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have so that she can apply for grants and get funding for future projects.)
+      p Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have when applying to get funding for future projects.)
 
       a(href="https://docs.google.com/forms/d/e/1FAIpQLSf5rjziTMGGLXBav_yak8t62o0iqyEnpGYg5VBKOed3IgpQbQ/viewform?usp=sf_link" target="_blank")
         button(tabindex="-1") Demographic survey
@@ -165,7 +168,7 @@ block content
       a(href="https://docs.google.com/forms/d/e/1FAIpQLScB-Vb7sSYFlD8ob0Lc_rr00DsfiYI31Um1NMOlfp72rIpiOw/viewform?usp=sf_link" target="_blank")
         button(tabindex="-1") Subscribe
 
-      p You’re invited to take a look at the 
+      p You’re invited to check out the 
         a(href="https://docs.google.com/spreadsheets/d/17Y3JT9glywDPLDD9cYtv2FwYSViGZLAsBNb8fDeneYM/edit?usp=sharing" target="_blank") project budget
         |  to learn more about the expenses involved in producing 
         i Four by Four
@@ -177,7 +180,7 @@ block content
       p(style="margin: 2.5rem 0 1rem; display: flex; justify-content: center;")
         img(src='../../assets/img/fourbyfour/kids/tiles.png' width="240px" style="margin: 0;")
 
-      a(href="/assets/ABOUT_ODC_THEATER.pdf?v=1") Learn more about ODC theatre
+      a(href="/assets/ABOUT_ODC_THEATER.pdf?v=1") Learn more about ODC Theater
 
 block scripts
   script sessionStorage.seen = true;
