remove captions sentence

--- a/fourbyfour/video.pug
+++ b/fourbyfour/video.pug
@@ -8,7 +8,7 @@ block content
       a(href="/fourbyfour")
         img(src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
     .bio-container.no-animation
-      p A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.
+      p A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the film on or before July 1, 2022.
 
       p This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.
 
