--- a/photos/index.pug
+++ b/photos/index.pug
@@ -12,6 +12,30 @@ block content
         h1#photo Photos
         div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 316, "fitWidth": true }')
           div.grid-item
+            img(src="../assets/img/dancing/masonry/27.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/26.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/25.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/24.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/23.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/22.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/21.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/19.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/18.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/17.png" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/16.jpg" data-action="zoom" data-caption="")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/15.jpg" data-action="zoom" data-caption="")
+          div.grid-item
             img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="<i>The Exceptionally Elderly Overweight Black Man Phoenix</i> | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
           div.grid-item
             img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="<i>BIG SALT</i> | Photograph by Summer Wilson for The Anata Project | 2019")
