update choreography page

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -11,6 +11,77 @@ block content
       h1 Choreography
       .choreo-box
         .copy
+          h4 Knock
+          h6 (In progress)
+          p A work commissioned by Post:ballet for their collaboration with the Kronos Quartet which will premiere in April, 2023 at YBCA in San Francisco, CA
+        img.visual(src="../assets/img/choreo/knock.jpg" alt="Knock")
+      .choreo-box
+        .copy
+          h4 Four by Four
+          h6 (2022)
+          p
+            | Choreographed and directed by Emily Hansel<br />
+            | Co-created and performed by Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert<br />
+            | Lighting and scenic design by Thomas Bowersox
+          p
+            i Four by Four 
+            | is an evening-length work which premiered at ODC Theater in May 2022. 
+            i Four by Four 
+            | was made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.
+          
+          p.left Press:
+          p.left
+            <a href="https://emilyhansel.me/fourbyfour/heatherdesaulniers" target="_blank">Thoughts on “Four by Four”</a>
+            br
+            | by Heather Desaulniers
+          p.left
+            <a href="https://medium.com/odc-dance-stories/in-four-by-four-the-process-is-transparent-4725a3e0a197" target="_blank">In “Four by Four” The Process Is Transparent</a>
+            br
+            | by Kathryn Florez for ODC Dance Stories
+          p.left
+            <a href="https://blog.lifeasamoderndancer.com/2022/06/four-by-four-by-emily-hansel-reflections-on-product-as-process.html?fbclid=IwAR3pyyhSAHJpXPrGSo3-oLCBCjwrcEBTZLfo_-dWuLCBXHMvlEkhZ62huQY" target="_blank">“Four by Four” by Emily Hansel: Reflections on Product as Process</a>
+            br
+            | by Molly Rose-Williams for the Life As A Modern Dancer blog
+          p.left
+            <a href="https://blog.lifeasamoderndancer.com/2022/07/holding-juxtaposition-post-performance-reflections-on-four-by-four-.html" target="_blank">Holding juxtaposition: post-performance reflections on "Four by Four"</a>
+            br
+            | by Emily Hansel for the Life As A Modern Dancer blog
+
+        img.visual(src="../assets/img/choreo/four_by_four.jpg" alt="Four by Four")
+      .choreo-box
+        .copy
+          h4 Rabble
+          h6 (2022)
+          p
+            | Choreographed by Emily Hansel<br />
+            | Performed by The Berkeley Ballet Theater Studio Company<br />
+            | Composition and live music by multi-instrumentalist Vân-Ánh Võ
+          p 
+            i Rabble 
+            | was commissioned by Berkeley Ballet Theater and premiered at BAMPFA in March, 2022 in Berkeley, CA
+
+        img.visual(src="../assets/img/choreo/rabble.jpg" alt="Rabble")
+      .choreo-box
+        .copy
+          h4 Eight Whiskus
+          h6 (2021)
+          p 
+            | Co-choreographed by Robin Dekkers and Emily Hansel<br />
+            | Performed by Emily Hansel<br />
+            | A site-specific dance for film co-choreographed with Robert Dekkers for Post:ballet which premiered virtually on January 7, 2021
+
+        iframe.visual(src="https://www.youtube.com/embed/uGBy0RYxghE?showinfo=0" height="240px" frameborder="0" allowfullscreen)
+      .choreo-box
+        .copy
+          h4 Secret Code
+          h6 (2022)
+          p
+            | Choreographed by Emily Hansel<br>
+            i Secret Code 
+            | was commissioned by the Lindenwood University Dance Program which premiered in November 2020 in St. Charles, MO
+        img.visual(src="../assets/img/choreo/secret_code.jpg" alt="Secret Code")
+      .choreo-box
+        .copy
           h4 PHANTOM
           h6 (2019)
           p.
