--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -52,6 +52,9 @@
       // border-bottom: 4px solid white
       opacity: 0
 
+      p.left
+        text-align: left
+
       .visual
         border: 4px solid white
         user-select: none
